--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -23,10 +23,7 @@
         }
       },
       "test": {
-        "type": "header",
-        "settings": {
-          "menu": "main-menu"
-        }
+        "type": "slider"
       }
     },
     "content_for_index": ["test"]
